--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "description": "Restful api error handler",
   "main": "index.js",
+  "module": "es/index.js",
   "scripts": {
     "build:dev": "webpack --config ./config/webpack.dev.js",
     "build:prod": "webpack --config ./config/webpack.prod.js",
@@ -34,6 +35,8 @@
   },
   "files": [
     "index.js",
-    "umd"
+    "restErrorHandler",
+    "umd",
+    "es"
   ]
 }
