--- a/.babelrc
+++ b/.babelrc
@@ -1,13 +1,6 @@
 {
   "presets": [
-    [
-      "env", {
-        "modules": "umd", // Convert to ES2015 modules
-      },
-    ],
+    "env",
     "stage-0",
-  ],
-  "plugins": [
-    "transform-es2015-modules-commonjs", // Convert ES2015 modules to CommonJs because Node6 does not support ES2015 features
   ],
 }
