--- a/package.json
+++ b/package.json
@@ -3,37 +3,29 @@
   "version": "0.0.2",
   "description": "Restful api error handler",
   "main": "index.js",
-  "module": "es/index.js",
   "scripts": {
-    "build": "node ./config/build.js",
-    "analyse": "webpack --config ./config/webpack.analyse.js",
-    "test": "jest",
-    "test:watch": "npm test -- --watch",
-    "doc": "jsdoc src -r"
+    "prebuild": "rimraf build",
+    "build:copy-files": "cross-env NODE_ENV=production babel-node ./script/copy-files.js",
+    "build:es2015": "cross-env NODE_ENV=production babel ./src/ -d ./build/ --ignore *.test.js",
+    "build:es2015modules": "cross-env NODE_ENV=production BABEL_ENV=modules babel ./src/index.js -o ./build/index.es.js",
+    "build:es": "cross-env NODE_ENV=production BABEL_ENV=es babel ./src/ -d ./build/es/ --ignore *.test.js",
+    "build": "yarn build:es2015 && yarn build:es2015modules && yarn build:es && yarn build:copy-files",
+    "version": "yarn build && npm publish build"
   },
   "repository": "git@github.com:marcosun/rest-error-handler.git",
   "author": "marcosun <marcoinbristol@gmail.com>",
   "license": "MIT",
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.0",
-    "babel-eslint": "^8.2.1",
-    "babel-jest": "^22.1.0",
-    "babel-loader": "^7.1.2",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-stage-0": "^6.24.1",
-    "clean-webpack-plugin": "^0.1.18",
-    "eslint": "^4.17.0",
-    "eslint-config-google": "^0.9.1",
-    "jest": "^22.1.4",
-    "jsdoc": "^3.5.5",
-    "uglifyjs-webpack-plugin": "^1.1.8",
-    "webpack": "^3.10.0",
-    "webpack-bundle-analyzer": "^2.10.0",
-    "webpack-merge": "^4.1.1"
-  },
-  "files": [
-    "index.js",
-    "es"
-  ]
+    "@babel/cli": "^7.2.3",
+    "@babel/core": "^7.2.2",
+    "@babel/node": "^7.2.2",
+    "@babel/preset-env": "^7.2.3",
+    "babel-eslint": "^10.0.1",
+    "cross-env": "^5.2.0",
+    "eslint": "^5.11.0",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-plugin-babel": "^5.3.0",
+    "eslint-plugin-import": "^2.14.0",
+    "fs-extra": "^7.0.1"
+  }
 }
