--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
   "repository": "git@github.com:marcosun/rest-error-handler.git",
   "author": "marcosun <marcoinbristol@gmail.com>",
   "license": "MIT",
+  "dependencies": {
+    "invariant": "^2.2.4"
+  },
   "devDependencies": {
     "@babel/cli": "^7.2.3",
     "@babel/core": "^7.2.2",
