--- a/package.json
+++ b/package.json
@@ -5,11 +5,10 @@
   "main": "index.js",
   "scripts": {
     "prebuild": "rimraf build",
-    "build:copy-files": "cross-env NODE_ENV=production babel-node ./script/copy-files.js",
-    "build:es2015": "cross-env NODE_ENV=production babel ./src/ -d ./build/ --ignore *.test.js",
-    "build:es2015modules": "cross-env NODE_ENV=production BABEL_ENV=modules babel ./src/index.js -o ./build/index.es.js",
-    "build:es": "cross-env NODE_ENV=production BABEL_ENV=es babel ./src/ -d ./build/es/ --ignore *.test.js",
-    "build": "yarn build:es2015 && yarn build:es2015modules && yarn build:es && yarn build:copy-files",
+    "build": "yarn build:cmd && yarn build:es && yarn build:copy-files",
+    "build:copy-files": "cross-env NODE_ENV=production ts-node ./script/copy-files.js",
+    "build:cmd": "cross-env NODE_ENV=production tsc",
+    "build:es": "cross-env NODE_ENV=production tsc --project tsconfig-es.json",
     "version": "yarn build && npm publish build"
   },
   "repository": "git@github.com:marcosun/rest-error-handler.git",
@@ -20,16 +19,9 @@
     "invariant": "^2.2.4"
   },
   "devDependencies": {
-    "@babel/cli": "^7.2.3",
-    "@babel/core": "^7.2.2",
-    "@babel/node": "^7.2.2",
-    "@babel/preset-env": "^7.2.3",
-    "babel-eslint": "^10.0.1",
     "cross-env": "^5.2.0",
-    "eslint": "^5.11.0",
-    "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-plugin-babel": "^5.3.0",
-    "eslint-plugin-import": "^2.14.0",
-    "fs-extra": "^7.0.1"
+    "fs-extra": "^7.0.1",
+    "ts-node": "^9.1.1",
+    "typescript": "^4.1.3"
   }
 }
