--- a/package.json
+++ b/package.json
@@ -19,8 +19,13 @@
     "invariant": "^2.2.4"
   },
   "devDependencies": {
+    "@types/common-tags": "^1.8.0",
+    "@types/express": "^4.17.11",
+    "@types/invariant": "^2.2.34",
+    "@types/node": "^14.14.25",
     "cross-env": "^5.2.0",
     "fs-extra": "^7.0.1",
+    "rimraf": "^3.0.2",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.3"
   }
